--- a/access/src/lang/pl.json
+++ b/access/src/lang/pl.json
@@ -2,34 +2,34 @@
     "lang-iso": "pl_PL",
     "no-js-message": "Dla funktsyonalnosty Zobacz pełną stronę эtoho to neobhodimo JavaScript. tutaj <a href='http://www.enable-javascript.com/ru/' target='_blank'>Instrukcje, jak aktywować JavaScript w swojej przeglądarce</a>.",
     "head-name": "For heroes",
-    "menu-name-1": "Fundraising",
-    "menu-name-2": "Handmade For Heroes",
-    "menu-name-3": "o Nas",
-    "footer-share": "Komunikować się w projekt:",
+    "menu-name-1": "Zbiórka pieniędzy",
+    "menu-name-2": "Zebrano",
+    "menu-name-3": "Trzeba zebrać",
+    "footer-share": "Udostępnij informację o projekcie",
 
     "title-home": "For Heroes",
-    "description-home": "Zbieramy, aby pomóc naszym bohaterom",
+    "description-home": "Zbieramy na pomoc dla naszych bohaterów",
 
     "title-handmade": "Handmade For Heroes - For Heroes",
-    "description-handmade": "Zbieramy, aby pomóc naszym bohaterom",
+    "description-handmade": "Zbieramy na pomoc dla naszych bohaterów",
     "main-title-handmade": "Jak to działa",
-    "title-handmade-1": "jednoczy artystów",
-    "text-handmade-1": "Stawianie ludzi, którzy chcą dostarczyć swoje produkty na sprzedaż",
-    "link-handmade-1": "Kreator aplikacji",
-    "title-handmade-2": "Posiadamy targi",
-    "text-handmade-2": "Okresowo prowadzenia sprzedaży charytatywne lub inne twórcze działania w celu pozyskiwania funduszy",
-    "link-handmade-2": "Nasze działania",
+    "title-handmade-1": "Jednoczymy rzemieślników",
+    "text-handmade-1": "Jednoczymy ludzi, którzy chętnie oddają do sprzedaży własne wyroby",
+    "link-handmade-1": "Zgłoszenie rzemieślnika",
+    "title-handmade-2": "Organizujemy targi",
+    "text-handmade-2": "Periodycznie organizujemy harytatywne wyprzedaże lub inne wydarzenia twórcze w celu zebrania pieniędzy",
+    "link-handmade-2": "Nasze imprezy",
     "title-handmade-3": "Pomagamy naszym bohaterom",
-    "text-handmade-3": "Zebrane fundusze wysłać pomoc wojskową: U ochotników indziej",
-    "link-handmade-3": "Gdzie trafiają pieniądze",
+    "text-handmade-3": "Zebrane pieniądze przekazujemy na pomoc wojskowym: SZU albo ochotnikom",
+    "link-handmade-3": "Przeznaczenie pieniędzy",
 
     "title-about": "For Heroes",
-    "description-about": "Zbieramy, aby pomóc naszym bohaterom",
-    "main-title-about": "grupa Wolontariat",
-    "people-tetjana": "Tatiana Kowalczuk",
-    "people-julіja": "Julia Smoylovska",
-    "people-evgenіj": "Jewgienij Slawjansk",
+    "description-about": "Zbieramy na pomoc dla naszych bohaterów",
+    "main-title-about": "Grupa wolontariuszy",
+    "people-tetjana": "Tetiana Kowalczuk",
+    "people-julіja": "Julia Smojlowska",
+    "people-evgenіj": "Jewhenij Slawianski",
     "contackus-about": "Kontakt",
-    "phone-about": "telefon:",
-    "mail-about": "poczta:"
+    "phone-about": "Numer telefonu:",
+    "mail-about": "e-mail:"
 }
