--- a/access/src/lang/en.json
+++ b/access/src/lang/en.json
@@ -1,35 +1,35 @@
 {
     "lang-iso": "en_GB",
-    "no-js-message": "Для полной функциональности этого сайта необходимо включить JavaScript. Вот <a href='http://www.enable-javascript.com/ru/' target='_blank'>инструкции, как включить JavaScript в вашем браузере</a>.",
-    "head-name": "For heroes",
-    "menu-name-1": "Збір коштів",
-    "menu-name-2": "Handmade For Heroes",
-    "menu-name-3": "Про нас",
-    "footer-share": "Розповсюдити інформацію про проект:",
+    "no-js-message": "For full functionality of this site it is necessary to enable JavaScript. Here are the <a href='http://www.enable-javascript.com/' target='_blank'> instructions how to enable JavaScript in your web browser</a>.",
+    "head-name": "",
+    "menu-name-1": "",
+    "menu-name-2": "",
+    "menu-name-3": "",
+    "footer-share": "",
 
-    "title-home": "For Heroes",
-    "description-home": "Ми збираємо на допомогу для наших героїв",
+    "title-home": "",
+    "description-home": "",
 
-    "title-handmade": "Handmade For Heroes - For Heroes",
-    "description-handmade": "Ми збираємо на допомогу для наших героїв",
-    "main-title-handmade": "Як це працює",
-    "title-handmade-1": "Об’єднуємо майстрів",
-    "text-handmade-1": "Збираємо людей, які бажають надати для продажу власні вироби",
-    "link-handmade-1": "Заявка майстра",
-    "title-handmade-2": "Проводимо ярмарки",
-    "text-handmade-2": "Періодично проводимо благодійні розпродажі або інші творчі акції зі збору коштів",
-    "link-handmade-2": "Наші заходи",
-    "title-handmade-3": "Допомагаємо нашим героям",
-    "text-handmade-3": "Зібрані кошти відправляємо на допомогому військовим: ВСУ або добровольцям",
-    "link-handmade-3": "Куди йдуть кошти",
+    "title-handmade": "",
+    "description-handmade": "",
+    "main-title-handmade": "",
+    "title-handmade-1": "",
+    "text-handmade-1": "",
+    "link-handmade-1": "",
+    "title-handmade-2": "",
+    "text-handmade-2": "",
+    "link-handmade-2": "",
+    "title-handmade-3": "",
+    "text-handmade-3": "",
+    "link-handmade-3": "",
 
-    "title-about": "For Heroes",
-    "description-about": "Ми збираємо на допомогу для наших героїв",
-    "main-title-about": "Волонтерська група",
-    "people-tetjana": "Тетяна Ковальчук",
-    "people-julіja": "Юлія Смойловська",
-    "people-evgenіj": "Евгеній Славянський",
-    "contackus-about": "Контакти",
-    "phone-about": "Телефон:",
-    "mail-about": "Пошта:"
+    "title-about": "",
+    "description-about": "",
+    "main-title-about": "",
+    "people-tetjana": "",
+    "people-julіja": "",
+    "people-evgenіj": "",
+    "contackus-about": "",
+    "phone-about": "",
+    "mail-about": ""
 }
